# python-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_project_template/: delete_me.py
