[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Badreddine Ben Nouma <badreddine.ben.nouma@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_template"}]

[tool.poetry.dependencies]
python = "^3.9"
gh = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
